# advent-of-code

./: .env  .gitignore  README.md  aoc_cli.settings.ini
2020/day1-rust/src/: main.rs
2020/day1_elixir/: .gitignore  README.md  mix.exs
2020/day1_elixir/lib/: day1_elixir.ex
2020/day1_elixir/test/: day1_elixir_test.exs
2020/day2_elixir/: .gitignore  README.md  mix.exs
2020/day2_elixir/lib/: day2_elixir.ex
2020/day2_elixir/test/: day2_elixir_test.exs
2020/day3_rust/src/: main.rs  wood_map.rs
2020/day4_elixir/: .gitignore  README.md  mix.exs
2020/day4_elixir/lib/: day4_elixir.ex
2020/day4_elixir/test/: day4_elixir_test.exs
2021/day1/: CMakeLists.txt  day1_p1.cpp  day1_p2.cpp  main.cpp  real_input.txt  string_utils.hpp  vec_utils.hpp
2023/: .gitignore  CMakeLists.txt  Cargo.toml  README.md
2023/advent_helpers/: file-exceptions.h  file-helpers.h  list-files.h  text-helpers.h
2023/cpp_utils/: cords.h  utils.h
2023/day0/: main.cpp
2023/day1/: main.cpp
2023/day1_python/: out  part2.py
2023/day2/: Game.cpp  Game.h  GameResult.cpp  GameResult.h  main.cpp
2023/day3/: Part.cpp  Part.h  day3.cpp
2023/day4_python/: main.py
2023/src/: common.rs  main.rs
2023/src/day05/: mod.rs  part1.rs  part2.rs
aoc-cli/cmd/: prepDay.go
aoc-cli/shared/: sitetools.go
aoc_cli/: Cargo.toml  aoc_cli.py
aoc_cli/src/: aoc_access.rs  main.rs
aoc_cli/utils/: aoc_client.py  aoc_fs.py  aoc_lang_templates.py  aoc_tasks.py  config.py
old_aoc_cli/: go.mod  go.sum  main.go
old_aoc_cli/cmd/: root.go
old_aoc_cli/shared/: handleLanguage.go  shared.go
(+10 files in other folders)
